# CI_live

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
include/: is_odd.hpp
src/: CMakeLists.txt  is_odd.cpp  main.cpp
tests/: CMakeLists.txt  is_odd_unittest.cpp
